manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-get-app-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      type: get-pod
  template:
    metadata:
      labels: 
        type: get-pod
    spec:
       containers:
        - name: get-con
          image: aksacr.azurecr.io/add-get-todo:v1
          ports:
           - containerPort: 8000
