manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-task-service
spec:
  selector:
    type: get-pod
  ports:
   - port: 80
     targetPort: 8000
  type: ClusterIP
